<resources>
    <string name="app_name">nba-today</string>
    <string name="menu_games">Игры</string>
    <string name="menu_table">Таблица</string>
    <string name="menu_more">Еще</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gamesFragment">Игры</string>
    <string name="tableLeads">Таблица лидеров</string>
    <string name="asd">Название игры</string>
    <string name="leftteam">leftTeam</string>
    <string name="rightteam">rightteam</string>
    <string name="leftTeamPts">123</string>
    <string name="gameStatus">gameStatus</string>
    <string name="leftimage">leftImage</string>
    <string name="rightImage">rightImage</string>
    <string name="back">назад</string>
    <string name="forward">вперед</string>
    <string name="home">home</string>
    <string name="guest">guest</string>
    <string name="Player">Игрок</string>
    <string name="Pts">ОЧК</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="rebound">ПОД</string>
    <string name="assist">ПЕР</string>
    <string name="notGameToday">Сегодня игр нет</string>
    <string name="notGamePlay">Игра еще не сыграна</string>
</resources>
