<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        android:id="@+id/cardViewGame"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_margin="8dp">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:padding="8dp">

        <ImageView
                android:id="@+id/leftImg"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/leftimage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/leftTeamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/leftteam"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/leftImg"
                app:layout_constraintStart_toStartOf="@id/leftImg"
                app:layout_constraintTop_toBottomOf="@id/leftImg"/>

        <TextView
                android:id="@+id/leftTeamPts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/leftTeamPts"
                app:layout_constraintBottom_toBottomOf="@id/leftImg"
                app:layout_constraintStart_toEndOf="@id/leftImg"
                app:layout_constraintTop_toTopOf="@id/leftImg"/>

        <TextView
                android:id="@+id/gameStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gameStatus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        <ImageView
                android:id="@+id/rightImg"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/rightImage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/rightTeamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rightteam"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/rightImg"
                app:layout_constraintStart_toStartOf="@id/rightImg"
                app:layout_constraintTop_toBottomOf="@+id/rightImg"/>

        <TextView
                android:id="@+id/rightTeamPts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/leftTeamPts"
                app:layout_constraintBottom_toBottomOf="@id/rightImg"
                app:layout_constraintEnd_toStartOf="@id/rightImg"
                app:layout_constraintTop_toTopOf="@id/rightImg"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>